did so additions to the project

--- a/experience-page/experience.html
+++ b/experience-page/experience.html
@@ -15,7 +15,7 @@
         <nav class="nav">
             <a href="../landing-page/index.html">Home /</a>
             <a href="../bio-page/bio.html" alt="Bio page">Bio /</a>
-            <a href="../portfolio-page/portfolio.html">Projects</a>
+            <a href="../portfolio-page/portfolio.html">portfolio</a>
         </nav>
     </header>
     <main>
