--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clement Ndimuangu</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -15,14 +15,14 @@
         <nav class="nav">
             <a href="../bio-page/bio.html" alt="Bio page">Bio /</a>
             <a href="../experience-page/experience.html">Experience /</a>
-            <a href="../portfolio-page/portfolio.html">Projects</a>
+            <a href="../portfolio-page/portfolio.html">portfolio</a>
         </nav>
     </header>
     <main>
         <div class="parent">
             <div class="intro">
-                <img src="../Resources//mail-logo.png" alt="Author">
-                <p>BUILDING FULL STACK WEB APPLICATIONS, ENHANCING CONNECTIVITY AND IMPROVING BUSSINESS FUNTIONS</p>
+                <img src="../Resources/elizeu-dias-2EGNqazbAMk-unsplash.jpg" alt="Author">
+                <p>BUILDING FULL STACK WEB APPLICATIONS, ENHANCING CONNECTIVITY AND IMPROVING BUSSINESS FUNCTIONS</p>
             </div>
         </div>
         <div class="technologies">
@@ -32,6 +32,9 @@
             <h3>SQL</h3>
             <h3>NODE</h3>
             <h3>EXPRESS</h3>
+            <h3>LINUX</h3>
+            <h3>PYTHON</h3>
+            <h3>BASH</h3>
         </div>
     </main>
     <footer>
