--- a/portfolio-page/portfolio.html
+++ b/portfolio-page/portfolio.html
@@ -13,14 +13,41 @@
             <a href="mailto:clement.ndimuangu@verizon.com">clement.ndimuangu@verizon.com</a>
         </div>
         <nav class="nav">
+            <a href="../landing-page/index.html">Home</a>
             <a href="../bio-page/bio.html" alt="Bio page">Bio /</a>
             <a href="../experience-page/experience.html">Experience /</a>
-            <a href="../landing-page/index.html">Home</a>
         </nav>
     </header>
     <main>
-        <h1>Porjects</h1>
-
+        <h1>Some Of My Porjects</h1>
+        <div class="main-content">
+            <div class="content">
+                <img src="../Resources/Screenshot 2024-09-06 101341.png" alt="">
+                <h4>Description</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, reiciendis facilis reprehenderit consequuntur sequi consequatur assumenda ipsa dolor, esse quae velit ipsam quisquam eos similique necessitatibus voluptas hic voluptatum doloribus.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>NodeJS</li>
+                    <li>ReactJS</li>
+                    <li>JavaScript</li>
+                    <li>Unsplash API</li>
+                    <li>Styled Component</li>
+                </ul>
+            </div>
+            <div class="content">
+                <img src="../Resources/Screenshot 2024-09-06 102216.png" alt="">
+                <h4>Description</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quibusdam voluptas, corporis animi accusantium perspiciatis ullam minima eum, doloremque blanditiis optio sunt qui saepe odio in harum est enim rem quidem sapiente. Ipsa quia veritatis eaque voluptatem magnam distinctio exercitationem.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>NodeJS</li>
+                    <li>Express.JS</li>
+                    <li>JavaScript</li>
+                    <li>MongoDb</li>
+                    <li>Mongoose</li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
