modified the code so index.html could be visible

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <header>
         <div id="mail">
-            <img src="../Resources/mail-logo.png" alt="mail logo" id="mail-logo">
+            <img src="./Resources/mail-logo.png" alt="mail logo" id="mail-logo">
             <a href="mailto:clement.ndimuangu@verizon.com">clement.ndimuangu@verizon.com</a>
         </div>
         <nav class="nav">
-            <a href="../bio-page/bio.html" alt="Bio page">Bio /</a>
-            <a href="../experience-page/experience.html">Experience /</a>
-            <a href="../portfolio-page/portfolio.html">portfolio</a>
+            <a href="./bio-page/bio.html" alt="Bio page">Bio /</a>
+            <a href="./experience-page/experience.html">Experience /</a>
+            <a href="./portfolio-page/portfolio.html">portfolio</a>
         </nav>
     </header>
     <main>
         <div class="parent">
             <div class="intro">
-                <img src="../Resources/elizeu-dias-2EGNqazbAMk-unsplash.jpg" alt="Author">
+                <img src="./Resources/elizeu-dias-2EGNqazbAMk-unsplash.jpg" alt="Author">
                 <p>BUILDING FULL STACK WEB APPLICATIONS, ENHANCING CONNECTIVITY AND IMPROVING BUSSINESS FUNCTIONS</p>
             </div>
         </div>
