--- a/experience-page/experience.html
+++ b/experience-page/experience.html
@@ -13,7 +13,7 @@
             <a href="mailto:clement.ndimuangu@verizon.com">clement.ndimuangu@verizon.com</a>
         </div>
         <nav class="nav">
-            <a href="../landing-page/index.html">Home /</a>
+            <a href="../index.html">Home /</a>
             <a href="../bio-page/bio.html" alt="Bio page">Bio /</a>
             <a href="../portfolio-page/portfolio.html">portfolio</a>
         </nav>
